--- a/templates/base.html
+++ b/templates/base.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>{% block title %}{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
-<body>
-    <nav class="navbar bg-body-tertiary">
+<body class=".bg-body-tertiary">
+    <nav class="navbar bg-warning">
         <div class="container-fluid">
-            <a class="navbar-brand">Navbar</a>
-            <a href="{{url_for('entregas')}}">Entregas</a>
+            <a class="navbar-brand fw-bold fs-2 user-select-none">TMO de México</a>
+            <a class="btn bg-warning-subtle" href="{{url_for('entregas')}}">Entregas</a>
             <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <a href="{{url_for('cerrar')}}">Cerrar Sesion</a>
+                
+                <a class="ms-5 mt-3 mb-3 form-control btn btn-danger bg-danger-gradient" href="{{url_for('cerrar')}}">Cerrar Sesion</a>
             </form>
         </div>
     </nav>
