--- a/templates/login.html
+++ b/templates/login.html
@@ -2,22 +2,56 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar sesión</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
+
 <body>
-    <h1>Iniciar sesión</h1>
-    <form method="post">
-        <label for="nombre_usuario">Nombre de usuario:</label>
-        <input type="text" name="usuario" required>
-        <br>
-        <label for="contraseña">Contraseña:</label>
-        <input type="password" name="password" required>
-        <br>
-        <input type="submit" value="Iniciar sesión">
-    </form>
+    <nav class="navbar bg-warning">
+        <a class="ms-5 navbar-brand fw-bold fs-2">TMO de México</a>
+    </nav>
+    <div class="container d-flex align-items-center justify-content-center" style="height: 100vh;">
+        <div class="col-5">
+                      
+            <form class="shadow-lg p-3 mb-5 bg-body-tertiary rounded form-control" method="post">
+                <h1 class="mt-5 text-center fw-bold user-select-none">Iniciar sesión</h1>
+                {% if error %}
+                <div class="mt-3 ms-5">
+                    <div class="ms-5 rounded bg-danger-subtle text-center col-8 fs-5 user-select-none">{{ error }} </div>
+                    <div class="ms-5 text-center col-8 fs-1 user-select-none">🙄</div>
+                </div>
+                {% else %}
+                <div class="mt-3 ms-5">
+                    <div class="ms-5 text-center col-8 fs-1 user-select-none">😃</div>
+                </div>
+                    
+                {% endif %}  
+                <div class="mb-3">
+                    <label for="nombre_usuario" class="mt-5 form-label fw-bold user-select-none">Nombre de usuario:</label>
+                    <div class="input-group">
+                        <span class="input-group-text fs-5 user-select-none">👤​</span>
+                        <input class="form-control user-select-none" type="text" placeholder="Ejemplo: user12345" name="usuario" required>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label for="contraseña" class="form-label fw-bold user-select-none">Contraseña:</label>
+                    <div class="input-group">
+                        <span class="input-group-text fs-5 user-select-none">​🔒​</span>
+                        <input class="form-control" type="password" name="password" required>
+                    </div>
+                    
+                </div>
+                <div class="text-center">
+                    <input class="mb-2 btn btn-primary" type="submit" value="Iniciar sesión">
+                </div>
+            </form>
+        </div>
+    </div>
 </body>
+
 </html>
