Cambios al 5 de diciembre 9:39

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
-<body class=".bg-body-tertiary">
+<body class="bg-secondary-subtle">
     <nav class="navbar bg-warning">
         <div class="container-fluid">
             <a class="navbar-brand fw-bold fs-2 user-select-none">TMO de México</a>
