Personalizacion de agregar pago

--- a/templates/pagos.html
+++ b/templates/pagos.html
@@ -10,9 +10,9 @@
             <table class="text-center rounded table table-striped-columns">
                 <thead>
                     <tr>
-                        <th>ID de Pago</th>
-                        <th>Nombre del archivo</th>
-                        <th>Estado</th>
+                        <th class="fs-4">ID de Pago</th>
+                        <th class="fs-4">Nombre del archivo</th>
+                        <th class="fs-4">Estado</th>
                     </tr>
                 </thead>
                 <tbody>
