--- a/templates/agregarPago.html
+++ b/templates/agregarPago.html
@@ -1,20 +1,30 @@
 {% extends 'base.html' %}
-
+{%block title%}Agregar Pago{%endblock%}
 {% block content %}
-    <h1>Subir Archivo</h1>
-
-    <form action="{{ url_for('agregarPago') }}" method="post" enctype="multipart/form-data">
-        <label for="file">Selecciona un archivo:</label>
-        <input class="form-control bg-primary" type="file" name="file" id="file" required>
-        
-        <label for="estado">Estado (1) Pagado, (0) Sin pagar:</label>
-        <input class="form-control" id="estado" type="number" name="estado" required>
-        
-        <input class="btn btn-success" type="submit" value="Subir Archivo">
-        {% if agregarPago %}
-            <h1>REgistro agrgado exitosamente</h1>
-        {% else %}
-            <h1>Lllena los campos para realizar un registro</h1>
-        {% endif %}
-    </form>
+    
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded">
+                <form action="{{ url_for('agregarPago') }}" method="post" enctype="multipart/form-data">
+                    <h1 class="">Subir Archivo</h1>
+                    <label for="file">Selecciona un archivo:</label>
+                    <input class="form-control bg-primary" type="file" name="file" id="file" required>
+                    
+                    <label for="estado">Estado (1) Pagado, (0) Sin pagar:</label>
+                    <input class="form-control" id="estado" type="number" name="estado" required>
+                    
+                    <input class="btn btn-success" type="submit" value="Subir Archivo">
+                    {% if agregarPago %}
+                        <h1>REgistro agrgado exitosamente</h1>
+                    {% else %}
+                        <h1>Lllena los campos para realizar un registro</h1>
+                    {% endif %}
+                    
+                    
+                </form>
+            </div>
+            
+        </div>
+    </div>
+    
 {% endblock %}
