Personalizacion agregar pago

--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -15,17 +15,21 @@
 
 
 <div class="row">
+    <!---->
     <div class="shadow-lg p-3 mb-5 bg-white rounded rounded list-group ms-5 rounded bg-white col-sm-3">
         <div class="hstack">
-            <h1 class="fs-1 mt-3 user-select-none">🗺️</h1><a class="ms-4 mt-3 btn bg-white fs-5">Ver papa de entregas de productos</a>
+            <h1 class="fs-1 mt-3 user-select-none">🗺️</h1><a class="ms-4 mt-3 btn bg-white fs-5">Ver papa de entregas
+                de productos</a>
         </div>
         <hr>
         <div class="hstack">
-            <h1 class="fs-1 mt-3 user-select-none">🧪</h1><a class="ms-4 mt-3 btn bg-white fs-5">Vitacora de galvanizado</a>
+            <h1 class="fs-1 mt-3 user-select-none">🧪</h1><a class="ms-4 mt-3 btn bg-white fs-5">Vitacora de
+                galvanizado</a>
         </div>
         <hr>
         <div class="hstack">
-            <h1 class="fs-1 mt-3 user-select-none">💲</h1><a class="ms-4 mt-3 btn bg-white fs-5" href="{{url_for('pagos')}}">Pagos</a>
+            <h1 class="fs-1 mt-3 user-select-none">💲</h1><a class="ms-4 mt-3 btn bg-white fs-5"
+                href="{{url_for('pagos')}}">Pagos</a>
         </div>
         <hr>
     </div>
