--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <nav class="navbar bg-warning">
+    <nav class="navbar bg-warning fixed-top">
         <a class="ms-5 navbar-brand fw-bold fs-2">TMO de México</a>
     </nav>
     <div class="container d-flex align-items-center justify-content-center" style="height: 100vh;">
@@ -47,7 +47,7 @@
                     
                 </div>
                 <div class="text-center">
-                    <input class="mb-2 btn btn-primary" type="submit" value="Iniciar sesión">
+                    <input class="rounded-pill mb-2 btn btn-primary" type="submit" value="Iniciar sesión">
                 </div>
             </form>
         </div>
