--- a/templates/agregarPago.html
+++ b/templates/agregarPago.html
@@ -1,30 +1,34 @@
 {% extends 'base.html' %}
-{%block title%}Agregar Pago{%endblock%}
+{% block title %}Agregar Pago{% endblock %}
 {% block content %}
-    
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded">
-                <form action="{{ url_for('agregarPago') }}" method="post" enctype="multipart/form-data">
-                    <h1 class="">Subir Archivo</h1>
-                    <label for="file">Selecciona un archivo:</label>
-                    <input class="form-control bg-primary" type="file" name="file" id="file" required>
-                    
-                    <label for="estado">Estado (1) Pagado, (0) Sin pagar:</label>
-                    <input class="form-control" id="estado" type="number" name="estado" required>
-                    
-                    <input class="btn btn-success" type="submit" value="Subir Archivo">
-                    {% if agregarPago %}
-                        <h1>REgistro agrgado exitosamente</h1>
-                    {% else %}
-                        <h1>Lllena los campos para realizar un registro</h1>
-                    {% endif %}
-                    
-                    
-                </form>
-            </div>
-            
+<div class="mt-5">
+
+</div>
+<div class="mt-5 container">
+    <div class="row align-items-center">
+        <div class="mt-5">
+
+        </div>
+        <h1 class="mt-5 fs-1 fw-bold">Subir Archivo</h1>
+        <div class="mt-5 shadow-lg p-3 mb-5 bg-body-tertiary rounded">
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    <div class="alert alert-success" role="alert">
+                        {{ messages[0] }}
+                    </div>
+                {% endif %}
+            {% endwith %}
+
+            <form action="{{ url_for('agregarPago') }}" method="post" enctype="multipart/form-data">
+                <label class="mt-4 fw-bold" for="file">Selecciona un archivo:</label>
+                <input class="mt-2 form-control bg-primary" type="file" name="file" id="file" required>
+
+                <label class="mt-5 fw-bold" for="estado">Estado (1) Pagado, (0) Sin pagar:</label>
+                <input class="mt-2 form-control" id="estado" type="number" name="estado" required>
+
+                <input class="mt-5 btn btn-success" type="submit" value="Subir Archivo">
+            </form>
         </div>
     </div>
-    
+</div>
 {% endblock %}
