--- a/templates/pagos.html
+++ b/templates/pagos.html
@@ -7,7 +7,7 @@
         <a class="btn bg-secondary col-3 mt-5 mb-5" href="{{url_for('agregarPago')}}">Agregar Pagos</a>
         <div class=" border rounded shadow p-3 mb-5 bg-body-tertiary rounded ">
 
-            <table class="text-center rounded table table-striped-columns">
+            <table class="text-center rounded table table-bordered table-striped-columns">
                 <thead>
                     <tr>
                         <th class="fs-4">ID de Pago</th>
@@ -15,7 +15,7 @@
                         <th class="fs-4">Estado</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody style="max-height: 300px; overflow-y: auto;">
                     {% for pago in pagos %}
                     <tr>
                         <td>{{pago[0]}}</td>
