--- a/templates/agregarPago.html
+++ b/templates/agregarPago.html
@@ -6,10 +6,12 @@
 </div>
 <div class="mt-5 container">
     <div class="row align-items-center">
+        
         <div class="mt-5">
 
         </div>
         <h1 class="mt-5 fs-1 fw-bold">Subir Archivo</h1>
+        <a href="{{url_for('pagos')}}">Pagos</a>
         <div class="mt-5 shadow-lg p-3 mb-5 bg-body-tertiary rounded">
             {% with messages = get_flashed_messages() %}
                 {% if messages %}
