--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@
         <a class="ms-5 navbar-brand fw-bold fs-2">TMO de México</a>
     </nav>
     <div class="container d-flex align-items-center justify-content-center" style="height: 100vh;">
-        <div class="col-5">
+        <div class="col-5 col-xsm-8">
                       
             <form class="shadow-lg p-3 mb-5 bg-body-tertiary rounded form-control" method="post">
                 <h1 class="mt-5 text-center fw-bold user-select-none">Iniciar sesión</h1>
