Listado de Archivos

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
 
 <div class="mt-5"></div>
 
-<body class="bg-secondary-subtle">
+<body class="mt-5 bg-secondary-subtle">
 
 
     {% block content %}{% endblock %}
