--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -32,6 +32,11 @@
                 href="{{url_for('pagos')}}">Pagos</a>
         </div>
         <hr>
+        <div class="hstack">
+            <h1 class="fs-1 mt-3 user-select-none">📁</h1><a class="ms-4 mt-3 btn bg-white fs-5"
+                href="{{url_for('verarchivos')}}">Ver Archivos</a>
+        </div>
+        <hr>
     </div>
     <div class="col-sm-4 mb-3 mb-sm-0 ms-3">
         <div class="card">
