Barra de busqueda de archivos implementada

--- a/templates/pagos.html
+++ b/templates/pagos.html
@@ -5,6 +5,7 @@
     <div class="row align-items-center">
         
         <h1 class="mt-5">Pagos </h1>
+        <a class="fs-4" href="{{url_for('inicio_usuario')}}">Ir a Inicio</a>
         <a class="btn bg-secondary col-3 mt-5 mb-5" href="{{url_for('agregarPago')}}">Agregar Pagos</a>
         <div class=" border rounded shadow p-3 mb-5 bg-body-tertiary rounded ">
 
