--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <title>{% block title %}{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <nav class="navbar bg-warning fixed-top">
+    <nav class="navbar bg-warning">
         <div class="container-fluid">
             <a class="navbar-brand fw-bold fs-2 user-select-none">TMO de México</a>
             <form class="d-flex" role="search">
@@ -20,10 +20,12 @@
 
 <div class="mt-5"></div>
 
-<body class="mt-5 bg-secondary-subtle">
+<body class=" bg-secondary-subtle">
 
 
-    {% block content %}{% endblock %}
+    <div class="mt-5">
+        {% block content %}{% endblock %}
+    </div>
 
 
 
