--- a/templates/verarchivos.html
+++ b/templates/verarchivos.html
@@ -4,15 +4,45 @@
 
 {% block content %}
 <div class="mt-5">
-    <h1>Archivos en el directorio static</h1>
+    <h1 class="mt-5 ms-5">Archivos en el directorio static</h1>
+    <form action="{{ url_for('verarchivos') }}" method="post" class="mt-3 mb-3">
+        <div class="col-5">
+            <div class="input-group col-5">
+                <input type="text" class="form-control rounded-pill border-dark" placeholder="Buscar archivo..." id="searchInput" name="search">
+            </div>
+        </div>
+    </form>
+    <a class="fs-4" href="{{ url_for('inicio_usuario') }}">Ir a Inicio</a>
+    <div class="d-flex flex-wrap mt-3" id="filesContainer">
         {% for file in files %}
-            <div class="card text-center" style="width: 18rem;">
-                <h1 class="fs-1"><📄</h1>
-                <div class="card-body">
-                    <a href="{{ static_dir }}/{{ file }}" target="_blank">{{ file }}</a>
-                </div>
-              </div>
+        <div class="ms-3 card text-center m-2 shadow p-3 mb-5 bg-body-tertiary rounded border-white" style="width: 18rem;">
+            <h1 class="mt-4 fs-1">📄</h1>
+            <div class="card-body">
+                <a class="text-black link-underline link-underline-opacity-0" href="{{ static_dir }}/{{ file }}" target="_blank">{{ file }}</a>
+                <form action="{{ url_for('eliminar_archivo', filename=file) }}" method="post">
+                    <button type="submit" class="mt-3 btn btn-danger">Eliminar</button>
+                </form>
+            </div>
+        </div>
         {% endfor %}
-    </ul>
+    </div>
 </div>
+
+<script>
+    document.getElementById('searchInput').addEventListener('keyup', function() {
+        const searchValue = this.value.toLowerCase();
+        const filesContainer = document.getElementById('filesContainer');
+        const files = filesContainer.getElementsByClassName('card');
+
+        for (let i = 0; i < files.length; i++) {
+            const file = files[i].getElementsByTagName('a')[0];
+            const filename = file.textContent.toLowerCase();
+            if (filename.includes(searchValue)) {
+                files[i].style.display = '';
+            } else {
+                files[i].style.display = 'none';
+            }
+        }
+    });
+</script>
 {% endblock %}
