--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -3,7 +3,7 @@
 {% block title %}Inicio | {{nombre}}{% endblock %}
 
 {% block content %}
-<div class="col-4 col-sm-5 hstack">
+<div class="col-4 col-sm-7 col-md-7 hstack">
     <div class="mt-5 ms-4 shadow p-3 mb-5 bg-body-tertiary rounded rounded col-6">
         <div class="">
             <h3 class=" fs-4 fw-bold user-select-none">Usuario:{{usuario}}</h3>
