--- a/templates/verarchivos.html
+++ b/templates/verarchivos.html
@@ -7,10 +7,11 @@
     <h1 class="mt-5 ms-5">Archivos en el directorio static</h1>
     <form action="{{ url_for('verarchivos') }}" method="post" class="mt-3 mb-3">
         <div class="col-5">
-            <div class="input-group col-5">
-                <input type="text" class="form-control rounded-pill border-dark" placeholder="Buscar archivo..." id="searchInput" name="search">
+            <div class="input-group col-5"> 
+                <input type="text" class="ms-5 form-control rounded-pill border-dark" placeholder="Buscar archivo..." id="searchInput" name="search">
             </div>
         </div>
+
     </form>
     <a class="fs-4" href="{{ url_for('inicio_usuario') }}">Ir a Inicio</a>
     <div class="d-flex flex-wrap mt-3" id="filesContainer">
@@ -18,10 +19,13 @@
         <div class="ms-3 card text-center m-2 shadow p-3 mb-5 bg-body-tertiary rounded border-white" style="width: 18rem;">
             <h1 class="mt-4 fs-1">📄</h1>
             <div class="card-body">
-                <a class="text-black link-underline link-underline-opacity-0" href="{{ static_dir }}/{{ file }}" target="_blank">{{ file }}</a>
+                <a class="text-black link-underline link-underline-opacity-0" href="{{ static_dir }}/{{ file }}" target="_blank" onmouseover="showPreview('{{ file }}')" onmouseout="hidePreview()">{{ file }}</a>
                 <form action="{{ url_for('eliminar_archivo', filename=file) }}" method="post">
                     <button type="submit" class="mt-3 btn btn-danger">Eliminar</button>
                 </form>
+                <div class="preview-container" id="preview_{{ file }}" style="display: none;">
+                    <!-- Vista previa del archivo -->
+                </div>
             </div>
         </div>
         {% endfor %}
@@ -29,6 +33,7 @@
 </div>
 
 <script>
+
     document.getElementById('searchInput').addEventListener('keyup', function() {
         const searchValue = this.value.toLowerCase();
         const filesContainer = document.getElementById('filesContainer');
@@ -41,6 +46,8 @@
                 files[i].style.display = '';
             } else {
                 files[i].style.display = 'none';
+                const previewContainer = files[i].getElementsByClassName('preview-container')[0];
+                previewContainer.style.display = 'none';  // Oculta la vista previa si el archivo no coincide con la búsqueda
             }
         }
     });
