--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navbar bg-warning fixed-top">
-        <a class="ms-5 navbar-brand fw-bold fs-2"></a>
+        <a class="ms-5 navbar-brand fw-bold fs-2">TMO de México</a>
     </nav>
     <div class="container d-flex align-items-center justify-content-center" style="height: 100vh;">
         <div class="col-5 col-xsm-8">
