--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -39,7 +39,7 @@
         <hr>
     </div>
     <div class="col-sm-4 mb-3 mb-sm-0 ms-3">
-        <div class="card">
+        <div class="card border-white">
             <div class="card-body">
                 <h5 class="card-title">Special title treatment</h5>
                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -48,7 +48,25 @@
         </div>
     </div>
     <div class="col-sm-4">
-        <div class="card">
+        <div class="card border-white">
+            <div class="card-body">
+                <h5 class="card-title">Special title treatment</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-4 mb-3 mb-sm-0 ms-3">
+        <div class="card border-white">
+            <div class="card-body">
+                <h5 class="card-title">Special title treatment</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-4">
+        <div class="card border-white">
             <div class="card-body">
                 <h5 class="card-title">Special title treatment</h5>
                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
