--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="bg-secondary-subtle">
     <nav class="navbar bg-warning fixed-top">
         <a class="ms-5 navbar-brand fw-bold fs-2">TMO de México</a>
     </nav>
