--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Troquelados Modulares S.A de C.V | Inicio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-warning">
         <div class="container-fluid">
@@ -19,20 +26,30 @@
         </div>
     </nav>
     <div class="mt-5">
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="{{ url_for('static', filename='racks.jpg') }}" class="d-block w-100" style="height: 450px; object-fit: cover;" alt="...">
+                    <img src="{{ url_for('static', filename=imagen) }}" class="d-block w-100" alt="1">
                 </div>
                 <div class="carousel-item">
-                    <img src="{{ url_for('static', filename='Soldadura_1.jpg') }}" class="d-block w-100" style="height: 450px; object-fit: cover;" alt="...">
+                    <img src="{{ url_for('static', filename=imagen) }}" class="d-block w-100" alt="2">
                 </div>
                 <div class="carousel-item">
-                    <img src="{{ url_for('static', filename='Soldadura_4.jpg') }}" class="d-block w-100" style="height: 450px; object-fit: cover;" alt="...">
+                    <img src="{{ url_for('static', filename=imagen) }}" class="d-block w-100" alt="3">
                 </div>
             </div>
         </div>
     </div>
     <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+    <footer class="bg-secondary fixed-bottom">
+        <div class="container">
+            <h4 class="fs-5 mt-3 text-white fw-bold">Troquelados Modulares S.A de C.V.</h4>
+            <h5 class="fs-6 text-white">Direccion : Autopista México - Queretaro, Km. 101, San Miguel de La Victoria,
+                Estado de México, México</h5>
+            <h5 class="fs-6 text-white">Telefono :</h5>
+            <h5 class="fs-6 text-white">Correo electronico : </h5>
+        </div>
+    </footer>
 </body>
+
 </html>
