--- a/templates/pagos.html
+++ b/templates/pagos.html
@@ -4,8 +4,8 @@
 <div class="container">
     <div class="row align-items-center">
 
-        <h1 class="mt-5">Pagos </h1>
-        <a class="fs-4" href="{{url_for('inicio_usuario')}}">Ir a Inicio</a>
+        <h1 class="mt-3 fw-bold fs-1">Pagos </h1>
+        <a class="fs-4 link-underline link-underline-opacity-0 text-secondary" href="{{url_for('inicio_usuario')}}">Ir a Inicio</a>
         <a class="btn bg-secondary col-3 mt-5 mb-5" href="{{url_for('agregarPago')}}">Agregar Pagos</a>
         <div class=" border rounded shadow p-3 mb-5 bg-body-tertiary rounded ">
 
