--- a/templates/verarchivos.html
+++ b/templates/verarchivos.html
@@ -2,16 +2,17 @@
 {% block title %}Archivos | Logistica{% endblock %}
 {% block content %}
 <div class="mt-5">
-    <h1 class="mt-5 ms-5">Archivos en el directorio static</h1>
+    <h1 class="mt-5 ms-5">Archivos Disponibles</h1>
     <form action="{{ url_for('verarchivos') }}" method="post" class="mt-3 mb-3">
-        <div class="col-5">
-            <div class="input-group col-5"> 
-                <input type="text" class="ms-5 form-control rounded-pill border-dark" placeholder="Buscar archivo..." id="searchInput" name="search">
+        <div class="col-8">
+            <div class="hstack"> 
+                <a class="fs-4 ms-5 col-5" href="{{ url_for('inicio_usuario') }}">/ Ir a Inicio</a>
+                <input type="text" class="ms-5 form-control rounded-pill fs-6" placeholder="Buscar archivo..." id="searchInput" name="search">
             </div>
         </div>
     </form>
-    <a class="fs-4" href="{{ url_for('inicio_usuario') }}">Ir a Inicio</a>
-    <div class="d-flex flex-wrap mt-3" id="filesContainer">
+    
+    <div class="d-flex flex-wrap mt-5 ms-3" id="filesContainer">
         {% for file in files %}
         <div class="ms-3 card text-center m-2 shadow p-3 mb-5 bg-body-tertiary rounded border-white" style="width: 18rem;">
             <h1 class="mt-4 fs-1">📄</h1>
