Vista de recuperacion de contraseña

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,16 +7,17 @@
     <title>{% block title %}{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <nav class="navbar bg-warning">
+</head>
+<header>
+    <nav class="navbar bg-warning fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand fw-bold fs-1 user-select-none">TMO de México</a>
             <form class="d-flex" role="search">
-                <a class="ms-5 mt-3 mb-3 form-control btn btn-danger bg-danger-gradient"
-                    href="{{url_for('cerrar')}}">Cerrar Sesion</a>
+                <a class="ms-5 mt-3 mb-3 form-control btn btn-danger bg-danger-gradient" href="{{url_for('cerrar')}}">Cerrar Sesion</a>
             </form>
         </div>
     </nav>
-</head>
+</header>
 
 <div class="mt-5"></div>
 
