--- a/templates/login.html
+++ b/templates/login.html
@@ -48,6 +48,9 @@
                 <div class="text-center">
                     <input class="rounded-pill mb-2 btn btn-primary" type="submit" value="Iniciar sesión">
                 </div>
+                <div class="text-center">
+                    <a href="{{url_for('contrasena')}}">Olvide mi contraseña</a>
+                </div>
             </form>
         </div>
     </div>
