--- a/templates/index.html
+++ b/templates/index.html
@@ -10,38 +10,57 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-
+    <style>
+        body {
+            padding-top: 70px; /* Ajuste para el espacio del navbar */
+        }
+    </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-warning">
-        <div class="container-fluid">
-            <a class="navbar-brand fw-bold fs-2 user-select-none" href="#">TMO de México | Logistica</a>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <form class="d-flex ms-auto" role="search">
-                    <a class="btn btn-primary" href="{{url_for('login')}}">Iniciar Sesion</a>
-                </form>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-warning fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand fw-bold fs-2 user-select-none" href="#">TMO de México | Logistica</a>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <form class="d-flex ms-auto" role="search">
+                        <a class="btn btn-primary" href="{{url_for('login')}}">Iniciar Sesion</a>
+                    </form>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
     <div class="mt-5">
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="{{ url_for('static', filename=imagen) }}" class="d-block w-100" alt="1">
-                </div>
-                <div class="carousel-item">
-                    <img src="{{ url_for('static', filename=imagen) }}" class="d-block w-100" alt="2">
-                </div>
-                <div class="carousel-item">
-                    <img src="{{ url_for('static', filename=imagen) }}" class="d-block w-100" alt="3">
+        <h1 class="text-center fs-1 fw-bold mt-5">Bienvenido .....</h1>
+        <div class="hstack">
+            <div class="mt-5 col-6 ms-5 ">
+            
+                <div id="carouselExampleSlidesOnly" class="carousel slide"  data-bs-ride="carousel">
+                    <div class="carousel-inner rounded">
+                        <div class="carousel-item active">
+                            <img src="{{ url_for('static', filename='racks.jpg' )}}" class="d-block w-100"
+                                style="height: 400px;" alt="1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="{{ url_for('static', filename='Soldadura_1.jpg') }}" class="d-block w-100"
+                                style="height: 400px;" alt="2">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="{{ url_for('static', filename='Soldadura_4.jpg') }}" class="d-block w-100"
+                                style="height: 400px;" alt="3">
+                        </div>
+                    </div>
                 </div>
             </div>
+            <div class="ms-5 col-4 text-center">
+                <p class="">
+                    Somos una empresa socialmente responsable
+                </p>
+            </div>
         </div>
+       
     </div>
-    <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.bundle.min.js') }}"></script>
-    <footer class="bg-secondary fixed-bottom">
+    <footer class="bg-black fixed-bottom">
         <div class="container">
             <h4 class="fs-5 mt-3 text-white fw-bold">Troquelados Modulares S.A de C.V.</h4>
             <h5 class="fs-6 text-white">Direccion : Autopista México - Queretaro, Km. 101, San Miguel de La Victoria,
