--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -1,79 +1,85 @@
 {% extends 'base.html' %}
-
 {% block title %}Inicio | {{nombre}}{% endblock %}
-
 {% block content %}
 <div class="col-4 col-sm-7 col-md-7 hstack">
     <div class="mt-5 ms-4 shadow p-3 mb-5 bg-body-tertiary rounded rounded col-6">
         <div class="">
-            <h3 class=" fs-4 fw-bold user-select-none">Usuario:{{usuario}}</h3>
+            <h3 class=" fs-4 fw-bold user-select-none"> Usuario: {{usuario}}</h3>
             <h6 class="fw-bold user-select-none">{{nombre}} {{apellidos}}</h6>
         </div>
     </div>
-    <h6 class="col-sm-10 ms-5 fs-1 text-center fw-bold user-select-none">Buenos dias .... {{nombre}} {{apellidos}}</h6>
+    {% if actual >= 6 and actual < 12 %} <h6 class="col-sm-10 ms-5 fs-1 text-center fw-bold user-select-none">¡Buenos
+        días, {{ nombre }} {{ apellidos }}!</h6>
+        {% elif actual >= 12 and actual < 18 %} <h6 class="col-sm-10 ms-5 fs-1 text-center fw-bold user-select-none">
+            ¡Buenas tardes, {{ nombre }} {{ apellidos }}!</h6>
+            {% else %}
+            <h6 class="col-sm-10 ms-5 fs-1 text-center fw-bold user-select-none">¡Buenas noches, {{ nombre }} {{
+                apellidos }}!</h6>
+            {% endif %}
 </div>
-
-
-<div class="row">
-    <!---->
-    <div class="shadow-lg p-3 mb-5 bg-white rounded rounded list-group ms-5 rounded bg-white col-sm-3">
-        <div class="hstack">
-            <h1 class="fs-1 mt-3 user-select-none">🗺️</h1><a class="ms-4 mt-3 btn bg-white fs-5">Ver papa de entregas
-                de productos</a>
-        </div>
-        <hr>
-        <div class="hstack">
-            <h1 class="fs-1 mt-3 user-select-none">🧪</h1><a class="ms-4 mt-3 btn bg-white fs-5">Vitacora de
-                galvanizado</a>
-        </div>
-        <hr>
-        <div class="hstack">
-            <h1 class="fs-1 mt-3 user-select-none">💲</h1><a class="ms-4 mt-3 btn bg-white fs-5"
-                href="{{url_for('pagos')}}">Pagos</a>
-        </div>
-        <hr>
-        <div class="hstack">
-            <h1 class="fs-1 mt-3 user-select-none">📁</h1><a class="ms-4 mt-3 btn bg-white fs-5"
-                href="{{url_for('verarchivos')}}">Ver Archivos</a>
-        </div>
-        <hr>
-    </div>
-    <div class="col-sm-4 mb-3 mb-sm-0 ms-3">
-        <div class="card border-white">
-            <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+<div class="hstack">
+    <div class="col-4">
+        <div class="col-8 row">
+            <!---->
+            <div class=" shadow-lg p-3 mb-5 bg-white rounded rounded list-group ms-5 rounded bg-white">
+                <div class="hstack">
+                    <h1 class="fs-1 mt-3 user-select-none">🗺️</h1><a class="ms-4 mt-3 btn bg-white fs-5">Ver papa de
+                        entregas
+                    </a>
+                </div>
+                <hr>
+                <div class="hstack">
+                    <h1 class="fs-1 mt-3 user-select-none">🧪</h1><a class="ms-4 mt-3 btn bg-white fs-5">Vitacora de
+                        galvanizado</a>
+                </div>
+                <hr>
+                <div class="hstack">
+                    <h1 class="fs-1 mt-3 user-select-none">💲</h1><a class="ms-4 mt-3 btn bg-white fs-5"
+                        href="{{url_for('pagos')}}">Pagos</a>
+                </div>
+                <hr>
+                <div class="hstack">
+                    <h1 class="fs-1 mt-3 user-select-none">📁</h1><a class="ms-4 mt-3 btn bg-white fs-5"
+                        href="{{url_for('verarchivos')}}">Ver Archivos</a>
+                </div>
+                <hr>
             </div>
         </div>
     </div>
-    <div class="col-sm-4">
-        <div class="card border-white">
-            <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+    <div class="row ms-2">
+        <div class="hstack ">
+            <div class="card" style="width: 30rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                </div>
+            </div>
+            <div class="card ms-5" style="width: 30rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="col-sm-4 mb-3 mb-sm-0 ms-3">
-        <div class="card border-white">
-            <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="hstack mt-5">
+            <div class="card" style="width: 30rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                </div>
             </div>
-        </div>
-    </div>
-    <div class="col-sm-4">
-        <div class="card border-white">
-            <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+            <div class="card ms-5" style="width: 30rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of thecard's content.</p>
+                </div>
             </div>
-        </div>
+        </div>  
     </div>
 </div>
-
+<div>
+</div>
 {% endblock %}
