Eliminacion de librerias inecesarias

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
     <style>
         body {
             padding-top: 70px; /* Ajuste para el espacio del navbar */
@@ -60,7 +61,7 @@
         </div>
        
     </div>
-    <footer class="bg-black fixed-bottom">
+    <footer class="bg-black fixed-bottom blur-none">
         <div class="container">
             <h4 class="fs-5 mt-3 text-white fw-bold">Troquelados Modulares S.A de C.V.</h4>
             <h5 class="fs-6 text-white">Direccion : Autopista México - Queretaro, Km. 101, San Miguel de La Victoria,
